# cpu-ml-demo

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-test.yaml  release.yaml
pytests/: test_placeholder.py
src/: main.py
