[project]
name = "cpu-ml-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "icecream>=2.1.8",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pylint>=3.3.8",
    "pylint-pydantic>=0.3.5",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
]
